--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -35,6 +35,13 @@
                 Login
             </button>
         </form>
+        <div class="mt-6 text-center">
+            <p class="text-gray-400">Don't have an account?</p>
+            <a href="/auth/register"
+               class="text-golden hover:text-amber-400 font-medium">
+                Register here
+            </a>
+        </div>
     </div>
 </body>
 </html>
